Turned the website upside down

--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
     
 }
 
+
 div {
 
-    width: 96%;
-    margin: 0 auto;
+    
     padding-top: 100px;
     font-size: 2em;
     background-color: deeppink;
@@ -27,13 +27,16 @@ div {
 @media (min-width: 768px){
  
     div {
-    margin-top: 100px;
-    float: left;
-    width: 48%;
+
     margin: 1%;
     padding-top: 100px;
     font-size: 3em;
     background-color: yellow;
 }
 
+}
+
+@media (min-width: 1180px){
+    
+    
 }
