--- a/css/d3.css
+++ b/css/d3.css
@@ -5,5 +5,15 @@ body {
 .bar {
     display: inline-block;
     margin-right: 2px;
-    fill: blue;
+    
+}
+
+#chartArea {
+    background-color: white;
+}
+
+.axis path, .axis line {
+    stroke: #000;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
 }
